--- a/Source code/Theme/Themes/Ranges/Slider.xaml
+++ b/Source code/Theme/Themes/Ranges/Slider.xaml
@@ -121,7 +121,7 @@
                                   Style="{StaticResource SliderRepeatButtonValuableStyle}"/>
                 </Track.DecreaseRepeatButton>
                 <Track.Thumb>
-                    <Thumb BorderThickness="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"
+                    <Thumb BorderThickness="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"
                            IsEnabled="{TemplateBinding IsEnabled}"
                            Width="{TemplateBinding root:Parameters.SliderThumbThickness}"
                            Height="{TemplateBinding Height}"
@@ -171,7 +171,7 @@
                                   Style="{StaticResource SliderRepeatButtonValuableStyle}"/>
                 </Track.DecreaseRepeatButton>
                 <Track.Thumb>
-                    <Thumb BorderThickness="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Top}"
+                    <Thumb BorderThickness="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Top}"
                            IsEnabled="{TemplateBinding IsEnabled}"
                            Width="{TemplateBinding Width}"
                            Height="{TemplateBinding root:Parameters.SliderThumbThickness}"
@@ -198,8 +198,7 @@
         <Setter Property="BorderBrush" Value="{DynamicResource MiddleLightBrush}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
-        <Setter Property="FontFamily" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=FontFamily, Mode=OneWay}"/>
-        <Setter Property="FontSize" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=TextFontSize, Mode=OneWay}"/>
+        <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.TextFontSize), Mode=OneWay}"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
